# chatbot-backend

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
chatbot/: main.py
chatbot/api/v1/: request_response.py  router.py  routes.py
chatbot/api/v1/auth/: request_response.py  routes.py
chatbot/clients/: google.py  jwt.py
chatbot/components/auth/: controller.py  crud.py  models.py
chatbot/components/chat/: async_crud.py  crud.py  enums.py  models.py  schemas.py
chatbot/components/user/: crud.py  models.py
chatbot/core/: constants.py  logger.py  models.py  utils.py
chatbot/database/: session.py
chatbot/flows/: ask_query.py  delete_query.py  get_chat_history.py  get_response.py  get_user.py  google_login.py  google_login_flow.py
chatbot/llm_agent/: agent.py  constants.py  controller.py  parsers.py  state.py
chatbot/llm_agent/nodes/: answer_query.py  base.py  contextualize_query.py
chatbot/middlewares/: db_session.py  exceptions.py
