[tool.poetry]
name = "artisan-chatbot"
version = "0.1.0"
description = ""
authors = ["nomad-coder420 <saketmahajan0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.34.0"
python-decouple = "^3.8"
alembic = "^1.13.2"
requests = "^2.32.3"
psycopg2-binary = "^2.9.10"
pyjwt = "^2.10.1"
cryptography = "^44.0.0"
langgraph = "^0.2.67"
langchain = "^0.3.15"
langchain-community = "^0.3.15"
transformers = "^4.48.1"
langchain-huggingface = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
